cabal-version:   3.0
name:            hercules
version:         0.0.0.0
license:         GPL-2.0-only
author:          redshift, Max Headroom
maintainer:      num@privatevoid.net, max@privatevoid.net
build-type:      Simple

common warnings
    ghc-options: -Wall

executable hercules
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        discord-haskell,
        string-conversions,
        text,
        unliftio
    hs-source-dirs:   src
    default-language: Haskell2010
