cabal-version:   3.0
name:            hercules
version:         0.0.0.0
license:         GPL-2.0-only
author:          redshift, Max Headroom
maintainer:      num@privatevoid.net, max@privatevoid.net
build-type:      Simple

common warnings
    ghc-options: -Wall

executable hercules
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Hercules.Commands
        Hercules.Commands.Info
        Hercules.Commands.Pick
        Hercules.CommandParameters.Types
        Hercules.Errors
        Hercules.Interactions
        Hercules.Types
        Hercules.Widgets.Embeds
    build-depends:
        base,
        containers,
        discord-haskell,
        random,
        string-conversions,
        text,
        transformers,
        unliftio
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
