cabal-version:   3.0
name:            mainframe
version:         0.0.0.0
license:         GPL-2.0-only
author:          redshift, Max Headroom
maintainer:      num@privatevoid.net, max@privatevoid.net
build-type:      Simple

common warnings
    ghc-options: -Wall

executable mainframe
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Mainframe.Commands
        Mainframe.Commands.Info
        Mainframe.Commands.Pick
        Mainframe.CommandParameters.Types
        Mainframe.Errors
        Mainframe.Interactions
        Mainframe.Types
        Mainframe.Widgets.Embeds
    build-depends:
        base,
        containers,
        discord-haskell,
        random,
        string-conversions,
        text,
        transformers,
        universum,
        unliftio
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        NoImplicitPrelude
